# Small-organ-segmentation

./: README.md
MA_prior/: create_folder.py  ffd.cfg  register.py  transform_label.py
MA_prior/label_fusion/: CMakeLists.txt  README.txt  adjust_header.py  label_fusion.cc
MA_prior/label_fusion/include/: irtkContextPatchBasedLabelFusion.h  irtkContextSVMLabelFusion.h  irtkLabelFusionBase.h  irtkMajorityVoteLabelFusion.h  irtkPatchBasedLabelFusionBase.h  irtkPatchBasedMSDLabelFusion.h
MA_prior/label_fusion/script/: labelfusion.py  pbaf_par.txt
MA_prior/label_fusion/src/: irtkContextPatchBasedLabelFusion.txx  irtkContextSVMLabelFusion.txx  irtkLabelFusionBase.txx  irtkMajorityVoteLabelFusion.txx  irtkPatchBasedLabelFusionBase.txx  irtkPatchBasedMSDLabelFusion.txx
coarse_segm/: deploy_save_pmap.py  malibo_C19.csv  reader_sampling.py  train_fcn_weighted.py
dltk/io/: augmentation.py
fine_segm/: casc_bladder.csv  deploy_bladder.py  reader_bladder.py  train_fcn_bladder.py
